--- a/index.html
+++ b/index.html
@@ -421,7 +421,8 @@
   </section>
 </main>
 <!-- partial -->
-  <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script><script  src="./script.js"></script>
+<!--   <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script> -->
+  <script  src="./script.js"></script>
 
 </body>
 </html>
